c4prj3_finish/grade.txt
Grading at Sun Oct  4 19:21:37 UTC 2020
Running 'make clean' to do a clean build of your project
rm -rf *.o poker *~
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o cards.o cards.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o deck.o deck.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o eval.o eval.c
eval.c: In function ‘flush_suit’:
eval.c:43:21: error: comparison between pointer and integer [-Werror]
   for (size_t i=0; i<num; i++){
                     ^
cc1: all warnings being treated as errors
<builtin>: recipe for target 'eval.o' failed
make: *** [eval.o] Error 1
make failed

Overall Grade: F
